--- a/themes/ansible-community/sass/_homepage-ecosystem-band.scss
+++ b/themes/ansible-community/sass/_homepage-ecosystem-band.scss
@@ -1,6 +1,5 @@
 .homepage-ecosystem-band {
   background-color: $grey94;
-  gap: 2rem;
 }
 
 .ecosystem-card {
